nothing to stop tor johnson

--- a/nowplaying.kv
+++ b/nowplaying.kv
@@ -11,7 +11,9 @@
 
 <NowPlaying>:
     orientation: 'vertical'
+    padding: [16]
 
 
 <NowPlayingBox>:
-    orientation: 'horizontal'
+    orientation: 'horizontal
+    padding: [16]
