slightly different layout

--- a/nowplaying.kv
+++ b/nowplaying.kv
@@ -3,7 +3,7 @@
 <NowPlayingLabel>:
     text_size: self.size
     valign: 'center'
-    halign: 'center'
+    halign: 'right'
     markup: True
     bold: True
     font_size: '28sp'
@@ -15,16 +15,16 @@
     NowPlayingLabel:
         id: title
         color: [1, 0, 0, 1]
-        size_hint: (1, .5)
+        font_size: '32sp'
+        underline: True
+
     NowPlayingLabel:
         id: artist
         color: [0, 1, 0, 1]
-        size_hint: (1, .5)
     NowPlayingLabel
         id: album
         color: [0, 0.5, 1, 1]
-        size_hint: (1, .5)
-    BoxLayout:
+        italic: True
 
 
 <NowPlayingBox>:
