--- a/nowplaying.kv
+++ b/nowplaying.kv
@@ -17,6 +17,7 @@
         color: [1, 0, 0, 1]
         font_size: '32sp'
         underline: True
+        size_hint: [1, 0.5]
 
     NowPlayingLabel:
         id: artist
