change to song info layout.

--- a/nowplaying.kv
+++ b/nowplaying.kv
@@ -5,7 +5,7 @@
     valign: 'center'
     halign: 'right'
     markup: True
-    font_size: '28sp'
+    font_size: '24sp'
 
 
 <NowPlaying>:
@@ -20,9 +20,11 @@
     NowPlayingLabel:
         id: artist
         color: [0, 1, 0, 1]
+        size_hint: [1, 0.3]
     NowPlayingLabel
         id: album
         color: [0, 0.5, 1, 1]
+        size_hint: [1, 0.3]
         italic: True
 
 
